--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  * Description: A simple lightweight and responsive WordPress theme designed with photographers and videographers in mind. Capture offers a fullscreen featured image slideshow built using cutting-edge technology, lightweight SVG assets, and offers featured video support. Capture also offers full support for WooCommerce e-commerce. Capture your memories today.
  * Author: Slocum Design Studio (Scott Sousa)
  * Author URI: http://slocumstudio.com/
- * Version: 1.1.4
+ * Version: 1.1.5
  * License: GPL2+
  * License URI: http://www.gnu.org/licenses/gpl.html
  * Tags: blue, green, orange, pink, purple, red, white, light, two-columns, left-sidebar, fluid-layout, custom-colors, custom-menu, editor-style, featured-images, full-width-template, sticky-post, theme-options, threaded-comments, responsive-layout, translation-ready
@@ -938,6 +938,229 @@ section.breadcrumb a:hover {
 
 .post-content {
 	padding: 0 3.5%;
+}
+
+
+/* Newsletter */
+.mc-gravity, .mc_gravity, .mc-newsletter, .mc_newsletter,
+.mc-gravity_wrapper, .mc_gravity_wrapper, .mc-newsletter_wrapper, .mc_newsletter_wrapper {
+	width: 100%;
+	max-width: 100% !important;
+	border: 1px solid #ddd;
+	border-radius: 3px;
+}
+
+form.mc-gravity, form.mc_gravity, form.mc-newsletter, form.mc_newsletter {
+	padding-bottom: 1em;
+	border: none;
+}
+
+.mc-gravity:before, .mc_gravity:before, .mc-newsletter:before, .mc_newsletter:before,
+.mc-gravity_wrapper:before, .mc_gravity_wrapper:before, .mc-newsletter_wrapper:before, .mc_newsletter_wrapper:before,
+.mc-gravity:after, .mc_gravity:after, .mc-newsletter:after, .mc_newsletter:after,
+.mc-gravity_wrapper:after, .mc_gravity_wrapper:after, .mc-newsletter_wrapper:after, .mc_newsletter_wrapper:after {
+	content: " ";
+	display: table;
+}
+
+.mc-gravity:after, .mc_gravity:after, .mc-newsletter:after, .mc_newsletter:after,
+.mc-gravity_wrapper:after, .mc_gravity_wrapper:after, .mc-newsletter_wrapper:after, .mc_newsletter_wrapper:after {
+	clear: both;
+}
+
+.mc-gravity .gform_heading, .mc_gravity .gform_heading, .mc-newsletter .gform_heading, .mc_newsletter .gform_heading,
+.mc-gravity_wrapper .gform_heading, .mc_gravity_wrapper .gform_heading, .mc-newsletter_wrapper .gform_heading, .mc_newsletter_wrapper .gform_heading {
+	width: 98%;
+	margin: 0;
+	padding: 2%;
+	color: #fff;
+	background: #333;
+	border-radius: 3px 3px 0 0;
+	font-size: 24px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.mc-gravity .gform_heading h3.gform_title, .mc_gravity .gform_heading h3.gform_title,
+.mc-newsletter .gform_heading h3.gform_title, .mc_newsletter .gform_heading h3.gform_title,
+.mc-gravity_wrapper .gform_heading h3.gform_title, .mc_gravity_wrapper .gform_heading h3.gform_title,
+.mc-newsletter_wrapper .gform_heading h3.gform_title, .mc_newsletter_wrapper .gform_heading h3.gform_title {
+	margin: 0 0 15px;
+}
+
+.mc-gravity .gform_heading span.gform_description, .mc_gravity .gform_heading span.gform_description,
+.mc-newsletter .gform_heading span.gform_description, .mc_newsletter .gform_heading span.gform_description,
+.mc-gravity_wrapper .gform_heading span.gform_description, .mc_gravity_wrapper .gform_heading span.gform_description,
+.mc-newsletter_wrapper .gform_heading span.gform_description, .mc_newsletter_wrapper .gform_heading span.gform_description {
+	font-size: 16px;
+	text-transform: none;
+	display: block;
+}
+
+.mc-gravity .gform_heading, .mc_gravity .gform_heading,
+.mc-newsletter .gform_heading, .mc_newsletter .gform_heading,
+.mc-gravity_wrapper .gform_heading, .mc_gravity_wrapper .gform_heading,
+.mc-newsletter_wrapper .gform_heading, .mc_newsletter_wrapper .gform_heading {
+	width: 96.10% !important;
+	margin: 0;
+	margin-bottom: 1.25em !important;
+	padding: 2%;
+}
+
+.mc-gravity .gform_body, .mc_gravity .gform_body,
+.mc-newsletter .gform_body, .mc_newsletter .gform_body,
+.mc-gravity_wrapper .gform_body, .mc_gravity_wrapper .gform_body,
+.mc-newsletter_wrapper .gform_body, .mc_newsletter_wrapper .gform_body {
+	width: 40%;
+	margin: 0 0 0 20%;
+	padding: 0;
+	float: left;
+}
+
+.mc-gravity  .gfield_label, .mc_gravity  .gfield_label,
+.mc-newsletter  .gfield_label, .mc_newsletter  .gfield_label,
+.mc-gravity_wrapper  .gfield_label, .mc_gravity_wrapper  .gfield_label,
+.mc-newsletter_wrapper  .gfield_label, .mc_newsletter_wrapper  .gfield_label {
+	margin: 0 !important;
+	display: none !important;
+}
+
+.mc-gravity  form li, .mc_gravity  form li,
+.mc-newsletter  form li, .mc_newsletter  form li,
+.mc-gravity_wrapper  form li, .mc_gravity_wrapper  form li,
+.mc-newsletter_wrapper  form li, .mc_newsletter_wrapper  form li {
+	width: auto !important;
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+.mc-gravity .gform_fields input, .mc_gravity .gform_fields input,
+.mc-newsletter .gform_fields input, .mc_newsletter .gform_fields input,
+.mc-gravity_wrapper .gform_fields input, .mc_gravity_wrapper .gform_fields input,
+.mc-newsletter_wrapper .gform_fields input, .mc_newsletter_wrapper .gform_fields input {
+	width: 90% !important;
+	margin-left: -2px;
+	font-size: 16px !important;
+	padding: 14px 5% !important;
+	border-radius: 3px 0 0 3px !important;
+}
+
+.mc-gravity .gform_fields .gfield_error input, .mc_gravity .gform_fields .gfield_error input,
+.mc-newsletter .gform_fields .gfield_error input, .mc_newsletter .gform_fields .gfield_error input,
+.mc-gravity_wrapper .gform_fields .gfield_error input, .mc_gravity_wrapper .gform_fields .gfield_error input,
+.mc-newsletter_wrapper .gform_fields .gfield_error input, .mc_newsletter_wrapper .gform_fields .gfield_error input {
+	background: #ffdfe0;
+}
+
+/* Placeholder color */
+.mc-gravity .gform_fields input::-webkit-input-placeholder, .mc_gravity .gform_fields input::-webkit-input-placeholder,
+.mc-newsletter .gform_fields input::-webkit-input-placeholder, .mc_newsletter .gform_fields input::-webkit-input-placeholder,
+.mc-gravity_wrapper .gform_fields input::-webkit-input-placeholder, .mc_gravity_wrapper .gform_fields input::-webkit-input-placeholder,
+.mc-newsletter_wrapper .gform_fields input::-webkit-input-placeholder, .mc_newsletter_wrapper .gform_fields input::-webkit-input-placeholder {
+	color: #aaa;
+}
+
+.mc-gravity .gform_fields input::-moz-placeholder, .mc_gravity .gform_fields input::-moz-placeholder,
+.mc-newsletter .gform_fields input::-moz-placeholder, .mc_newsletter .gform_fields input::-moz-placeholder,
+.mc-gravity_wrapper .gform_fields input::-moz-placeholder, .mc_gravity_wrapper .gform_fields input::-moz-placeholder,
+.mc-newsletter_wrapper .gform_fields input::-moz-placeholder, .mc_newsletter_wrapper .gform_fields input::-moz-placeholder {
+	color: #aaa;
+}
+
+.mc-gravity .gform_fields input:-ms-input-placeholder, .mc_gravity .gform_fields input:-ms-input-placeholder,
+.mc-newsletter .gform_fields input:-ms-input-placeholder, .mc_newsletter .gform_fields input:-ms-input-placeholder,
+.mc-gravity_wrapper .gform_fields input:-ms-input-placeholder, .mc_gravity_wrapper .gform_fields input:-ms-input-placeholder,
+.mc-newsletter_wrapper .gform_fields input:-ms-input-placeholder, .mc_newsletter_wrapper .gform_fields input:-ms-input-placeholder {
+	color: #aaa;
+}
+
+.mc-gravity div.validation_error, .mc_gravity div.validation_error,
+.mc-newsletter div.validation_error, .mc_newsletter div.validation_error,
+.mc-gravity_wrapper div.validation_error, .mc_gravity_wrapper div.validation_error,
+.mc-newsletter_wrapper div.validation_error, .mc_newsletter_wrapper div.validation_error {
+	padding: 0 20px !important;
+	font-size: 16px !important;
+	text-align: center;
+}
+
+.mc-gravity .top_label .gfield_error .ginput_container,
+.mc-newsletter .top_label .gfield_error .ginput_container,
+.mc-gravity_wrapper .top_label .gfield_error .ginput_container,
+.mc-newsletter_wrapper .top_label .gfield_error .ginput_container {
+	max-width: 100% !important;
+}
+
+.mc-gravity li.gfield.gfield_error.gfield_contains_required, .mc_gravity li.gfield.gfield_error.gfield_contains_required,
+.mc-newsletter li.gfield.gfield_error.gfield_contains_required, .mc_newsletter li.gfield.gfield_error.gfield_contains_required,
+.mc-gravity_wrapper li.gfield.gfield_error.gfield_contains_required, .mc_gravity_wrapper li.gfield.gfield_error.gfield_contains_required,
+.mc-newsletter_wrapper li.gfield.gfield_error.gfield_contains_required, .mc_newsletter_wrapper li.gfield.gfield_error.gfield_contains_required {
+	margin: 0 !important;
+	padding: 0 !important;
+	background: transparent !important;
+	border: none !important;
+}
+
+.mc-gravity li.gfield.gfield_error.gfield_contains_required div.ginput_container, .mc_gravity li.gfield.gfield_error.gfield_contains_required div.ginput_container,
+.mc-newsletter li.gfield.gfield_error.gfield_contains_required div.ginput_container, .mc_newsletter li.gfield.gfield_error.gfield_contains_required div.ginput_container,
+.mc-gravity_wrapper li.gfield.gfield_error.gfield_contains_required div.ginput_container, .mc_gravity_wrapper li.gfield.gfield_error.gfield_contains_required div.ginput_container,
+.mc-newsletter_wrapper li.gfield.gfield_error.gfield_contains_required div.ginput_container, .mc_newsletter_wrapper li.gfield.gfield_error.gfield_contains_required div.ginput_container {
+	margin: 0 !important;
+}
+
+
+.mc-gravity .gform_fields .gfield_error .validation_message, .mc_gravity .gform_fields .gfield_error .validation_message,
+.mc-newsletter .gform_fields .gfield_error .validation_message, .mc_newsletter .gform_fields .gfield_error .validation_message,
+.mc-gravity_wrapper .gform_fields .gfield_error .validation_message, .mc_gravity_wrapper .gform_fields .gfield_error .validation_message,
+.mc-newsletter_wrapper .gform_fields .gfield_error .validation_message, .mc_newsletter_wrapper .gform_fields .gfield_error .validation_message {
+	display: none !important;
+}
+
+.mc-gravity .gform_footer, .mc_gravity .gform_footer,
+.mc-newsletter .gform_footer, .mc_newsletter .gform_footer,
+.mc-gravity_wrapper .gform_footer, .mc_gravity_wrapper .gform_footer,
+.mc-newsletter_wrapper .gform_footer, .mc_newsletter_wrapper .gform_footer {
+	width: 20%;
+	margin: 0 20% 0 0 !important;
+	padding: 0 !important;
+	float: left;
+	clear: none !important;
+	position: relative;
+}
+
+.mc-gravity .gform_footer input.button, .mc_gravity .gform_footer input.button,
+.mc-newsletter .gform_footer input.button, .mc_newsletter .gform_footer input.button,
+.mc-gravity_wrapper .gform_footer input.button, .mc_gravity_wrapper .gform_footer input.button,
+.mc-newsletter_wrapper .gform_footer input.button, .mc_newsletter_wrapper .gform_footer input.button {
+	width: 100%;
+	height: 52px;
+	margin: 0;
+	padding: 0;
+	display: block;
+	border: none;
+	border-radius: 0 3px 3px 0;
+}
+
+.mc-gravity .gform_ajax_spinner, .mc_gravity .gform_ajax_spinner,
+.mc-newsletter .gform_ajax_spinner, .mc_newsletter .gform_ajax_spinner,
+.mc-gravity_wrapper .gform_ajax_spinner, .mc_gravity_wrapper .gform_ajax_spinner,
+.mc-newsletter_wrapper .gform_ajax_spinner, .mc_newsletter_wrapper .gform_ajax_spinner {
+	position: absolute;
+	top: 17px;
+	right: -25px;
+}
+
+.mc-gravity-confirmation, .mc_gravity-confirmation, .mc-newsletter-confirmation, .mc_newsletter-confirmation {
+	width: 98%;
+	margin: 1em 0;
+	padding: 2%;
+	color: #fff;
+	background: #333;
+	border-radius: 3px;
+}
+
+.mc-gravity-confirmation .gform_confirmation_wrapper, .mc_gravity-confirmation .gform_confirmation_wrapper,
+.mc-newsletter-confirmation .gform_confirmation_wrapper, .mc_newsletter-confirmation .gform_confirmation_wrapper {
+	border: none;
 }
 
 /* Single Post Jetpack Share Buttons */
@@ -2110,6 +2333,10 @@ ul.woocommerce-error {
 }
 
 @media only screen and (max-width: 768px) {
+	body #header {
+		padding-top: 54px;
+	}
+
 	body #header, body > div.in, body #footer{
 		-webkit-transition: all .25s ease-in-out;
 		-moz-transition: all .25s ease-in-out;
@@ -2119,8 +2346,9 @@ ul.woocommerce-error {
 	}
 
 	body.open {
-		/*width: 100%;*/
-		position: fixed;
+		/*width: 100%;
+		position: fixed;*/
+		overflow: hidden;
 	}
 
 	body.open #header, body.open > div.in, body.open #footer{
@@ -2146,9 +2374,13 @@ ul.woocommerce-error {
 	/* Top Bar/Mobile Nav */
 	.top-bar {
 		width: 100%;
+		height: 54px;
 		background: #333;
 		position: relative;
 		z-index: 10;
+		z-index: 50;
+		position: fixed;
+		top: 0;
 	}
 
 	.mobile-nav-button {
@@ -2241,6 +2473,16 @@ ul.woocommerce-error {
 
 	.mobile-menu li a:hover {
 		background: #000;
+	}
+
+	.mobile-menu .social-media a {
+		width: 29px;
+		padding: 12px 4%;
+		font-size: 32px;
+		text-align: center;
+		font-family: FontAwesome;
+		font-weight: normal;
+		display: inline-block;
 	}
 
 	.mobile-menu .mobile-nav-close-button {
@@ -2412,6 +2654,32 @@ ul.woocommerce-error {
 	button, input[type=reset], input[type=submit],
 	.page-numbers li .page-numbers, .page-numbers li  span.current, .page-numbers li  span.dots {
 		font-size: 14px;
+	}
+
+	/* Newsletter */
+	.mc-gravity .gform_heading, .mc_gravity .gform_heading,
+	.mc-newsletter .gform_heading, .mc_newsletter .gform_heading,
+	.mc-gravity_wrapper .gform_heading, .mc_gravity_wrapper .gform_heading,
+	.mc-newsletter_wrapper .gform_heading, .mc_newsletter_wrapper .gform_heading {
+		width: 94.1% !important;
+		padding: 3%;
+	}
+
+	.mc-gravity .gform_body, .mc_gravity .gform_body,
+	.mc-newsletter .gform_body, .mc_newsletter .gform_body,
+	.mc-gravity_wrapper .gform_body, .mc_gravity_wrapper .gform_body,
+	.mc-newsletter_wrapper .gform_body, .mc_newsletter_wrapper .gform_body {
+		width: 50%;
+		margin: 0 0 0 10%;
+
+	}
+
+	.mc-gravity .gform_footer, .mc_gravity .gform_footer,
+	.mc-newsletter .gform_footer, .mc_newsletter .gform_footer,
+	.mc-gravity_wrapper .gform_footer, .mc_gravity_wrapper .gform_footer,
+	.mc-newsletter_wrapper .gform_footer, .mc_newsletter_wrapper .gform_footer {
+		width: 30%;
+		margin: 0 10% 0 0 !important;
 	}
 }
 
@@ -2593,6 +2861,24 @@ ul.woocommerce-error {
 	.widget-container:after,
 	.widget-container:before {
 		top: -30px;
+	}
+
+	/* Newsletter */
+	.mc-gravity .gform_body, .mc_gravity .gform_body,
+	.mc-newsletter .gform_body, .mc_newsletter .gform_body,
+	.mc-gravity_wrapper .gform_body, .mc_gravity_wrapper .gform_body,
+	.mc-newsletter_wrapper .gform_body, .mc_newsletter_wrapper .gform_body {
+		width: 55%;
+		margin: 0 0 0 5%;
+
+	}
+
+	.mc-gravity .gform_footer, .mc_gravity .gform_footer,
+	.mc-newsletter .gform_footer, .mc_newsletter .gform_footer,
+	.mc-gravity_wrapper .gform_footer, .mc_gravity_wrapper .gform_footer,
+	.mc-newsletter_wrapper .gform_footer, .mc_newsletter_wrapper .gform_footer {
+		width: 35%;
+		margin: 0 5% 0 0 !important;
 	}
 }
 
