--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@
  * License: GPL2+
  * License URI: http://www.gnu.org/licenses/gpl.html
  * Tags: blue, green, orange, pink, purple, red, white, light, two-columns, left-sidebar, fluid-layout, custom-colors, custom-menu, editor-style, featured-images, full-width-template, sticky-post, theme-options, threaded-comments, responsive-layout, translation-ready
+ * Text Domain: capture
 
  * Capture WordPress theme, Copyright (C) 2013-2015 Slocum Studio
  * Capture WordPress theme is licensed under the GPL.
 
- * @see attribution.txt for more license information.
+ * @see readme.txt for more license information.
  */
 
 /**
@@ -186,11 +187,10 @@ a img.aligncenter {
 	background-color: #f1f1f1;
 	border-radius: 3px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-	clip: auto !important;
+	clip: auto;
 	color: #21759b;
 	display: block;
 	font-size: 14px;
-	font-size: 0.875rem;
 	font-weight: bold;
 	height: auto;
 	left: 5px;
